--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ python =
 
 [testenv]
 deps=-rrequirements-dev.txt
-whitelist_externals=coverage,pip,cv2,numpy,glob
+whitelist_externals=coverage,pip,cv2,numpy,glob2
 # See .coveragerc for list of omitted files
 commands = coverage erase
            coverage run -a --source ./sksurgerybard -m pytest -v -s ./tests/
