--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ build docs:
   script:
     - tox -e docs
   tags:
-    - shared-linux
+    - shared-linux, gui
   artifacts:
     paths:
     - doc/
@@ -27,7 +27,7 @@ build linux installer:
   script:
     - tox -e installer
   tags:
-    - shared-linux
+    - shared-linux, gui
   artifacts:
     paths:
     - dist/
@@ -39,7 +39,7 @@ build mac installer:
   script:
     - tox -e installer
   tags:
-    - shared-mac
+    - shared-mac, gui
   artifacts:
     paths:
     - dist/
@@ -51,7 +51,7 @@ build windows installer:
   script:
     - tox -e installer
   tags:
-    - shared-win
+    - shared-win, gui
   artifacts:
     paths:
     - dist/
@@ -60,10 +60,15 @@ build windows installer:
 
 test Linux:
   stage: test
+  variables:
+    LD_LIBRARY_PATH: ${CI_PROJECT_DIR}/.tox/py36/lib/python3.6/site-packages/PySide2/Qt/plugins/platforms
+    DISPLAY: localhost:1
   script:
-      - tox
+    - echo "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}"
+    - echo "DISPLAY=${DISPLAY}"
+    - tox
   tags:
-    - shared-linux
+    - shared-linux, gui
   coverage: '/^TOTAL.*\s+(\d+\%)$/'
 
 
@@ -72,7 +77,7 @@ test macOS:
   script:
       - tox
   tags:
-    - shared-mac
+    - shared-mac, gui
 
 
 test Windows:
@@ -80,38 +85,7 @@ test Windows:
   script:
       - tox
   tags:
-    - shared-win
-
-
-deploy docs to staging:
-  stage: deploy
-  script:
-    # Note: the group/username directory must already exist on the server before calling this command
-    - rsync -avz -e'ssh -v' --numeric-ids --delete doc/build/html/* staging_docs_rsync:WEISS/SoftwareRepositories/SNAPPY/scikit-surgerybard 2>&1
-  tags:
-    - docs-staging
-  environment:
-    name: staging
-    url: http://weisslab-lin.cs.ucl.ac.uk/staging/WEISS/SoftwareRepositories/SNAPPY/scikit-surgerybard
-  only:
-    - master
-  dependencies:
-    - build docs
-
-
-deploy docs to production:
-  stage: deploy
-  script:
-    # Note: the group/username directory must already exist on the server before calling this command
-    - rsync -avz -e'ssh -v' --numeric-ids --delete doc/build/html/* production_docs_rsync:WEISS/SoftwareRepositories/SNAPPY/scikit-surgerybard 2>&1
-  tags:
-    - docs-production
-  environment:
-    name: production
-  only:
-    - public
-  dependencies:
-    - build docs
+    - shared-win, gui
 
 deploy pip to PyPI:
 
