--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py27,py36,lint
+envlist = py36,lint
 skipsdist = True
 
 [travis]
 python =
-  2.7: py27
   3.6: py36, docs, lint
 
 [testenv]
+passenv = *
 deps=-rrequirements-dev.txt
 whitelist_externals=coverage,pip,cv2,numpy,glob2
 # See .coveragerc for list of omitted files
@@ -20,7 +20,7 @@ commands = coverage erase
 basepython=python3.6
 deps=pylint
      {[testenv]deps}
-commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=cv2 sksurgerybard
+commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=vtk,cv2 sksurgerybard
 
 [testenv:docs]
 basepython=python3.6
@@ -29,18 +29,11 @@ commands = sphinx-build -M html . build
 
 [testenv:installer]
 basepython=python3.6
-commands=pyinstaller --onefile sksurgerybard.py --noconfirm --windowed
-
-[testenv:pip2]
-basepython=python2.7
-changedir=pip_test
-skip_install=True
-commands = pip install {posargs}
-           sksurgerybard --help
+commands=python -c "print('Installer not needed for this project.')"
 
 [testenv:pip3]
 basepython=python3.6
 changedir=pip_test
 skip_install=True
 commands = pip install {posargs}
-           sksurgerybard --help
+
