Issue #4: imported code from sksurgeryutils for camera grab,
To run the app, run the command (python3 sksurgerybard.py)

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands = coverage erase
 basepython=python3.6
 deps=pylint
      {[testenv]deps}
-commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=vtk,cv2 sksurgerybard
+commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=pyside2,vtk,cv2 sksurgerybard
 
 [testenv:docs]
 basepython=python3.6
