--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+PySide2
 pytest
 # This file lists the python packages that your software depends on.
 # It is used by pip to manage software dependencies. It is not to be
@@ -6,4 +7,5 @@ pytest
 numpy
 glob2
 scikit-surgerycore
+sksurgeryutils
 opencv-contrib-python
