--- a/config/config.json
+++ b/config/config.json
@@ -7,5 +7,8 @@
         "clock": 15,
         "fullscreen": false
 
+    },
+    "calibrationData": {
+        "path": "tests/data/calibrationData.npz"
     }
 }
