Issue #4: Grab aruco points

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ python =
 [testenv]
 passenv = *
 deps=-rrequirements-dev.txt
-whitelist_externals=coverage,pip,cv2,numpy,glob2
+whitelist_externals=coverage,pip,opencv-python,numpy,glob2s
 # See .coveragerc for list of omitted files
 commands = coverage erase
            coverage run -a --source ./sksurgerybard -m pytest -v -s ./tests/
@@ -20,7 +20,7 @@ commands = coverage erase
 basepython=python3.6
 deps=pylint
      {[testenv]deps}
-commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=PySide2,vtk,cv2 sksurgerybard
+commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=PySide2,vtk,cv2, sksurgerybard
 
 [testenv:docs]
 basepython=python3.6
