Issue #4: reference data loaded in main bard app

--- a/config/config.json
+++ b/config/config.json
@@ -13,5 +13,8 @@
     },
     "models": {
         "models_dir": "tests/data/models"
+    },
+    "referenceData": {
+        "ref_file": "tests/data/referencePoints/ref.txt"
     }
 }
