Issue #4: New entry point added to load world points from text file.

--- a/config/config.json
+++ b/config/config.json
@@ -16,5 +16,8 @@
     },
     "referenceData": {
         "ref_file": "tests/data/referencePoints/ref.txt"
+    },
+        "worldData": {
+        "world_file": "tests/data/worldPoints/world.txt"
     }
 }
