Issue #4: pointers file added and imported into main bard app

--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,10 @@
     "referenceData": {
         "ref_file": "tests/data/referencePoints/ref.txt"
     },
-        "worldData": {
+    "worldData": {
         "world_file": "tests/data/worldPoints/world.txt"
+    },
+    "pointerData": {
+        "pointer_file": "tests/data/pointers/pointers.txt"
     }
 }
