Issue #4: Code updated to get tracking matrix.

--- a/config/config.json
+++ b/config/config.json
@@ -22,5 +22,8 @@
     },
     "pointerData": {
         "pointer_file": "tests/data/pointers/pointers.txt"
+    },
+    "intrinsicsData": {
+        "intrinsics_file": "tests/data/intrinsics/intrinsics.txt"
     }
 }
