--- a/config/config.json
+++ b/config/config.json
@@ -17,6 +17,9 @@
     "referenceData": {
         "ref_file": "tests/data/referencePoints/ref.txt"
     },
+        "pointersData": {
+        "pointer_file": "tests/data/pointers/pointers.txt"
+    },
     "worldData": {
         "world_file": "tests/data/worldPoints/world.txt"
     },
