Issue #15 explicitly passed widgets to lint, fixed lint errors

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands = coverage erase
 basepython=python3.6
 deps=pylint
      {[testenv]deps}
-commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=PySide2,vtk,cv2, sksurgerybard
+commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=PySide2,vtk,cv2, sksurgerybard sksurgerybard/widgets
 
 [testenv:docs]
 basepython=python3.6
