--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 numpy
 glob2
 PySide2<=5.12.0
-scikit-surgerycore
+scikit-surgerycore>=0.2.0
 scikit-surgeryutils
 scikit-surgeryvtk
 opencv-contrib-python
