--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tox
+ 
+      - name: Run tox on ubuntu using xvfb
+        if: startsWith(matrix.os, 'ubuntu')
+        run: |
+          sudo apt-get install xvfb
+          sudo Xvfb :1 -screen 0 1024x768x24 </dev/null &
+          export DISPLAY=":1"
+          xvfb-run tox
 
-      - name: Run tox
+      - name: Run tox on windows/mac
+        # Matches the 'o' in 'windows' or 'macos'
+        if: contains(matrix.os, 'o')
         run: |
           tox
 
