--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ scikit-surgerycore
 scikit-surgeryutils
 scikit-surgeryvtk
 opencv-contrib-python
+vtk<9
 #scikit-surgeryspeech>=0.2.0 #uncomment this to use speech interface
 #PocketSphinx # uncomment this to use speech with sphinx
