--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@
 # doc/requirements.rst
 numpy
 glob2
-vtk<9.0.0
-PySide2<=5.12.0
+vtk<=9.0.1
+PySide2<5.15.0
 scikit-surgerycalibration
 scikit-surgerycore
 scikit-surgeryutils
