Issue #63 use coverage rather than tox, in line with sksurgeryvtk

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,14 @@ jobs:
           sudo Xvfb :1 -screen 0 1024x768x24 </dev/null &
           export DISPLAY=":1"
           export LD_LIBRARY_PATH=$pythonLocation"/lib/python3.6/site-packages/PySide2/Qt/plugins/platfoms"
-          xvfb-run tox
+          coverage erase
+          coverage run -a --source ./sksurgerbard -m pytest
+          coverage report -m
+
+      - name: Linting on ubuntu
+	if: startsWith(matrix.os, 'ubuntu')
+        run: |
+          pylint --rcfile=tests/pylintrc sksurgerybard
 
       - name: Run tox on windows/mac
         # Matches the 'o' in 'windows' or 'macos'
