--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,20 +22,11 @@ jobs:
       - name: Run tox on ubuntu using xvfb
         if: startsWith(matrix.os, 'ubuntu')
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
           sudo apt-get install xvfb libxkbcommon-x11-0
           sudo Xvfb :1 -screen 0 1024x768x24 </dev/null &
           export DISPLAY=":1"
           export LD_LIBRARY_PATH=$pythonLocation"/lib/python3.6/site-packages/PySide2/Qt/plugins/platfoms"
-          coverage erase
-          coverage run -a --source ./sksurgerbard -m pytest
-          coverage report -m
-
-      - name: Linting on ubuntu
-        if: startsWith(matrix.os, 'ubuntu')
-        run: |
-          pylint --rcfile=tests/pylintrc sksurgerybard
+          tox
 
       - name: Run tox on windows/mac
         # Matches the 'o' in 'windows' or 'macos'
