--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,25 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.6
+
+
+      # VTK uses OpenGL 2.0, but the windows Server version used on
+      # GitHub actions only has 1.1, so need to setup software rendering
+      # with Mesa.
+      # https://github.com/pal1000/mesa-dist-win
+      - name: Setup Mesa (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          curl --output mesa.7z -L https://github.com/pal1000/mesa-dist-win/releases/download/20.1.1-2/mesa3d-20.1.1-release-mingw.7z
+          7z x mesa.7z -omesa -y
+
+          # The script requires user input (choice of options) so need to
+          # fiddle to get it to run automatically. Not a clean way to do it,
+          # but works.
+          sed -i 's/@echo Please make a deployment choice:/@GOTO desktopgl/g' mesa\systemwidedeploy.cmd
+          sed -i 's/@echo Desktop OpenGL drivers deploy complete./@exit/g' mesa\systemwidedeploy.cmd
+          mesa\systemwidedeploy.cmd
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
