Issue #61 remove __init__ from coverage

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,5 @@
 [run]
-omit = 
+omit =  *__init__.py*
         ./sksurgerybard/_version.py
-        ./sksurgerybard/__init__.py
         ./sksurgerybard/__main__.py
         ./sksurgerybard/ui/sksurgerybard_command_line.py
