--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@
 numpy
 glob2
 PySide2<5.15.0
-scikit-surgerycalibration
+scikit-surgerycalibration>=0.1.9
 scikit-surgerycore>=0.6.8
 scikit-surgeryutils
 scikit-surgeryvtk
 scikit-surgeryarucotracker>=0.2.4
-opencv-contrib-python
+opencv-contrib-python<=4.5.1
 #scikit-surgeryspeech>=0.2.0 #uncomment this to use speech interface
 #PocketSphinx # uncomment this to use speech with sphinx
