--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ scikit-surgerycore>=0.6.8
 scikit-surgeryutils
 scikit-surgeryvtk
 scikit-surgeryarucotracker>=0.2.4
-opencv-contrib-python<=4.5.1
+opencv-contrib-python
 #scikit-surgeryspeech>=0.2.0 #uncomment this to use speech interface
 #PocketSphinx # uncomment this to use speech with sphinx
