Issue #76 see if we can remove versioneer from the source tree and only invoke it when we run tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,38 +1,40 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py36,lint
+envlist = py37,lint
 skipsdist = True
+requires = setuptools >= 47.1
 
 [travis]
 python =
-  3.6: py36, docs, lint
+  3.7: py37, docs, lint
 
 [testenv]
 passenv = *
 deps=-rrequirements-dev.txt
 whitelist_externals=coverage,pip,opencv-python,numpy,glob2s
 # See .coveragerc for list of omitted files
-commands = coverage erase
+commands = versioneer install
+           coverage erase
            coverage run -a --source ./sksurgerybard -m pytest -v -s ./tests/
            coverage report -m
 
 [testenv:lint]
-basepython=python3.6
+basepython=python3.7
 deps=pylint
      {[testenv]deps}
 commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=PySide2,vtk,cv2, sksurgerybard tests
 
 [testenv:docs]
-basepython=python3.6
+basepython=python3.7
 changedir = doc
 commands = sphinx-build -M html . build
 
 [testenv:installer]
-basepython=python3.6
+basepython=python3.7
 commands=python -c "print('Installer not needed for this project.')"
 
 [testenv:pip3]
-basepython=python3.6
+basepython=python3.7
 changedir=pip_test
 skip_install=True
 commands = pip install {posargs}
