--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,10 +70,11 @@ jobs:
           python-version: 3.7
 
       - name: Install dependencies
-        run: python -m pip install wheel twine setuptools
+        run: python -m pip install wheel twine setuptools versioneer
 
       - name: Build wheel
         run: |
+	  versioneer install
           python setup.py sdist
 
       - name: Publish package if tagged release
