--- a/tox.ini
+++ b/tox.ini
@@ -11,9 +11,11 @@ python =
 [testenv]
 passenv = *
 deps=-rrequirements-dev.txt
-whitelist_externals=coverage,pip,opencv-python,numpy,glob2s
+whitelist_externals=git
 # See .coveragerc for list of omitted files
 commands = versioneer install
+           git restore --staged  sksurgerybard/_version.py
+           git update-index --assume-unchanged sksurgerybard/_version.py
            coverage erase
            coverage run -a --source ./sksurgerybard -m pytest -v -s ./tests/
            coverage report -m
