Issue #96 added some configuration options to json

--- a/config/example_config.json
+++ b/config/example_config.json
@@ -25,6 +25,9 @@
     "models": {
         "models_dir": "data/models",
 	"target_model_vertices": [-1],
+	"model_visibilities": [1],
+	"model_opacities": [0.5, 1.0, 1.0],
+	"model_representations": ["w", "s", "s"],
         "reference_to_model": "data/reference_to_model.txt",
         "visible_anatomy": 1
     },
