--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ glob2
 PySide2<5.15.0
 scikit-surgerycalibration>=0.1.9
 scikit-surgerycore>=0.6.8
-scikit-surgeryutils
+scikit-surgeryutils<1.2
 scikit-surgeryvtk
 scikit-surgeryarucotracker>=0.2.5
-opencv-contrib-python
+opencv-contrib-python-headless
 #scikit-surgeryspeech>=0.2.0 #uncomment this to use speech interface
 #PocketSphinx # uncomment this to use speech with sphinx
