--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 numpy
 glob2
 PySide2<5.15.0
-scikit-surgerycalibration>=0.1.9
+scikit-surgerycalibration<=0.1.11
 scikit-surgerycore>=0.6.8
 scikit-surgeryutils<1.2
 scikit-surgeryvtk
