Issue #101 now allowlist instead whitelist

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ python =
 [testenv]
 passenv = *
 deps=-rrequirements-dev.txt
-whitelist_externals=git
+allowlist_externals=git
 # See .coveragerc for list of omitted files
 commands = versioneer install
            git restore --staged  sksurgerybard/_version.py
