--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,9 +78,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tox
+          pip install -r requirements-dev.txt
  
-      - name: Run tox on ubuntu using xvfb
+      - name: Install dependencies and run tests using xvfb (ubuntu-latest)
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           sudo apt-get update
@@ -104,15 +104,20 @@ jobs:
           coverage run -a --source ./sksurgerybard -m pytest -v -s
           coverage report -m
 
-      - name: Run tox on windows/mac
+      - name: Run tests Windows/Mac
         # Matches the 'o' in 'windows' or 'macos'
         if: contains(matrix.os, 'o')
         run: |
-          tox
+          coverage erase
+          coverage run -a --source ./sksurgerybard -m pytest -v -s
+          coverage report -m
+
+      - name: Linting
+        run: |
+          pylint --rcfile=tests/pylintrc sksurgerybard
 
       - name: Run coveralls
         run: |
-          pip install coveralls pyyaml
           coveralls
 
   deploy:
