updates `pyside6>=6.5.1.1` `scikit-surgeryutils>=2.0.0` `scikit-surgeryvtk>=2.0.1`; adds generated tox files (#115)

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@
 # doc/requirements.rst
 numpy
 glob2
-pyside6>=6.4.2
+pyside6>=6.5.1.1
 scikit-surgerycalibration>=0.2.4
 scikit-surgerycore>=0.6.10
-scikit-surgeryutils==2.0rc0
-scikit-surgeryvtk==2.0rc0
+scikit-surgeryutils>=2.0.0
+scikit-surgeryvtk>=2.0.1
 scikit-surgeryarucotracker>=1.0.1
 opencv-contrib-python-headless>=4.2.0.32
 #scikit-surgeryspeech>=0.2.0 #uncomment this to use speech interface
