updates `adds .readthedocs.yaml and requirements-docs.txt and modifies tox.in and requirements-dev.txt (#115)

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=PySide6,vtk,cv
 [testenv:docs]
 basepython=python3.8
 changedir = doc
+deps=-rrequirements-docs.txt
 commands = sphinx-build -M html . build
 
 [testenv:installer]
