--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,7 +14,7 @@ build:
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   builder: html
-  configuration: docs/conf.py
+  configuration: doc/conf.py
   fail_on_warning: false
 
 # Optionally declare the Python requirements required to build your docs
