--- a/tox.ini
+++ b/tox.ini
@@ -1,44 +1,25 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38,lint
+envlist = test,lint
 skipsdist = True
 requires = setuptools >= 47.1
 
-[travis]
-python =
-  3.8: py38, docs, lint
-
 [testenv]
+basepython=python3.10
 passenv = *
 deps=-rrequirements-dev.txt
-allowlist_externals=git
+
 # See .coveragerc for list of omitted files
-commands = versioneer install
-           git restore --staged  sksurgerybard/_version.py
-           git update-index --assume-unchanged sksurgerybard/_version.py
-           coverage erase
+commands = coverage erase
            coverage run -a --source ./sksurgerybard -m pytest -v -s ./tests/
            coverage report -m
 
 [testenv:lint]
-basepython=python3.8
 deps=pylint
      {[testenv]deps}
 commands=pylint --rcfile=tests/pylintrc --extension-pkg-whitelist=PySide6,vtk,cv2, sksurgerybard tests
 
 [testenv:docs]
-basepython=python3.8
 changedir = doc
 deps=-rrequirements-docs.txt
 commands = sphinx-build -M html . build
-
-[testenv:installer]
-basepython=python3.8
-commands=python -c "print('Installer not needed for this project.')"
-
-[testenv:pip3]
-basepython=python3.8
-changedir=pip_test
-skip_install=True
-commands = pip install {posargs}
-
