--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,44 +5,35 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-ver: [3.8]
+        os: [ubuntu-latest, windows-latest, macos-13]
+        python-ver: [3.9, "3.11"]
         experimental: [false]
         include:
-          - python-ver: 3.9
+          - python-ver: "3.10"
+            os: ubuntu-latest
+            experimental: false
+          - python-ver: "3.10"
+            os: macos-13
+            experimental: true
+          - python-ver: "3.10"
+            os: windows-latest
+            experimental: false
+          - python-ver: 3.12
             os: ubuntu-latest
             experimental: true
-          - python-ver: 3.9
+          - python-ver: 3.12
+            os: macos-latest
+            experimental: true
+          - python-ver: 3.12
             os: windows-latest
             experimental: true
-          - python-ver: 3.9
-            os: macos-latest
-            experimental: true
-          - python-ver: '3.10'
+          - python-ver: 3.13
             os: ubuntu-latest
             experimental: true
-          - python-ver: '3.10'
+          - python-ver: 3.13
             os: macos-latest
             experimental: true
-          - python-ver: '3.10'
-            os: windows-latest
-            experimental: true
-          - python-ver: 3.11
-            os: ubuntu-latest
-            experimental: true
-          - python-ver: 3.11
-            os: macos-latest
-            experimental: true
-          - python-ver: 3.11
-            os: windows-latest
-            experimental: true
-          - python-ver: 3.12-dev
-            os: ubuntu-latest
-            experimental: true
-          - python-ver: 3.12-dev
-            os: macos-latest
-            experimental: true
-          - python-ver: 3.12-dev
+          - python-ver: 3.13
             os: windows-latest
             experimental: true
 
@@ -131,16 +122,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: 3.11
 
       - name: Install dependencies
         run: python -m pip install wheel twine setuptools versioneer
 
       - name: Build wheel
         run: |
-          versioneer install
-          git restore --staged  sksurgerybard/_version.py
-          git update-index --assume-unchanged sksurgerybard/_version.py
           python setup.py sdist
 
       - name: Publish package if tagged release
